--- a/css/home.css
+++ b/css/home.css
@@ -3,6 +3,15 @@ html, body{
     text-decoration: none;
 }
 
+.header{
+    background-image: url("../img/head-photo.jpg");
+    background-size:cover;
+    background-position: center;
+    height: 25em;
+    color: white;
+    padding-top: 5em;
+}
+
 body a{
     text-decoration: none;
 }
