--- a/css/home.css
+++ b/css/home.css
@@ -1,7 +1,15 @@
+
 html, body{
+    background-color: lightgrey !important;
     text-align: center;
     text-decoration: none;
+    background-size: contain;
 }
+
+body{
+    background-color: lightgrey;
+}
+
 
 .header{
 
@@ -23,6 +31,10 @@ li{
     display: inline;
 }
 
+.nav{
+    background-color: white;
+}
+
 .nav-pills{
     text-decoration: none;
     list-style-type: none;
@@ -35,7 +47,7 @@ ul li{
 }
 
 .btn{
-    background-color: lightgrey;
+    background-color: darkgrey;
     color: white;
 }
 
@@ -44,13 +56,16 @@ ul li{
 }
 
 .right-column{
-    border: solid;
+    background-color: cadetblue;
     
 }
 
 .thumbnail{
-    height: 5em;
+    height: 20em;
     width: auto;
 }
+
+
+
 
 
